--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^4.9.0",
     "fontfaceobserver": "^2.0.13",
     "lodash": "^4.17.4"
   }
